# python_project_template

./: .buildinfo  .dockerignore  .editorconfig  .env.sample  .gcloudignore  .gitignore  .pre-commit-config.yaml  .tflint.hcl  CLAUDE.md  Dockerfile  Dockerfile.lambda  LICENSE  LICENSE.txt  Makefile  README.md  cli.py  cloudbuild.yaml  commandline.html  compose.yml  deploy_gcp.sh  docker-compose.aws.yml  docker-compose.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme_link.html  requirements.txt  search.html  searchindex.js  setup.cfg  test_logging_config.py  todolist.html
.devcontainer/: devcontainer.json
.doctrees/: commandline.doctree  environment.pickle  index.doctree  modules.doctree  readme_link.doctree  todolist.doctree
.doctrees/source/: modules.doctree  python_project_template.conf.doctree  python_project_template.doctree  python_project_template.utils.doctree  src.config.doctree  src.doctree  src.util.doctree  src.utils.doctree
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ai-pr-reviewer.yml  ci.yml  claude.yml  comment-on-pr-failure.yml  container_security.yml  gh-pages.yml  pr-agent.yml  static_analysis.yml  test.yml
.streamlit/: config.toml
_modules/: index.html
_modules/python_project_template/: cli.html
_modules/python_project_template/conf/: conf.html  settings.html
_modules/python_project_template/utils/: settings.html
_modules/src/: cli.html
_modules/src/config/: settings.html
_modules/src/util/: logging.html
_sources/: commandline.rst.txt  index.rst.txt
_sources/source/: modules.rst.txt  python_project_template.conf.rst.txt  python_project_template.rst.txt  python_project_template.utils.rst.txt  src.config.rst.txt  src.rst.txt  src.util.rst.txt  src.utils.rst.txt
app/: app.py  di.py  settings.py
app/domain/message/: message_repository.py
app/infrastructure/repository/message/: aws_message_repository.py  azure_message_repository.py  gcp_message_repository.py  sqlite_message_repository.py  util.py
app/logger/: config.py  logger_config_aws.yaml  logger_config_azure.yaml  logger_config_default.yaml  logger_config_gcp.yaml  logging.py
app/presentation/cli/: app.py
app/presentation/dash/: index.py  injector.py
app/presentation/dash/component/: history.py  message.py
app/presentation/dash/pages/: error.py  home.py  register.py
app/presentation/fastapi/: app.py  exception_handlers.py
app/presentation/fastapi/controller/: error_controller.py  get_injector.py  history_controller.py  register_controller.py
app/presentation/fastapi/frontend/: index.html
app/presentation/fastapi/view_model/: error_view_model.py  history_view_model.py  register_view_model.py
app/presentation/flask/: app.py  routes.py
app/presentation/flask/controller/: error_controller.py  history_controller.py  register_controller.py
app/presentation/flask/templates/: base.html  error.html  history.html  register.html
app/presentation/streamlit/layouts/: error.py  injector.py  register.py  top.py
app/shared/: injector_factory.py
app/shared/controller/: base_controller.py  message_controller.py
app/shared/dto/: message_dto.py
app/usecase/: error.py  history.py  register.py
credentials/: README.md
docs/: commandline.rst  conf.py  modules.rst  todolist.rst
docs/architecture/: architecture_fastapi.drawio
docs/requirements/: screen_transition.drawio
docs/usecase/: usecase.drawio
infra/aws/: .terraform.lock.hcl  backend.tf  main.tf  provider.tf  readme.md
infra/aws/modules/app_runner/: app_runner.tf  valiables.tf
infra/aws/modules/cloudwatch/: cloudwatch.tf  valiables.tf
infra/aws/modules/dynamodb/: dynamodb.tf  valiables.tf
infra/aws/modules/ecr/: ecr.tf  valiables.tf
infra/aws/modules/iam/: iam.tf  ima.tf
infra/aws/modules/sns/: sns.tf
infra/aws_apprunner/: .terraform.lock.hcl  README.md  main.tf  output.tf  provider.tf  variables.tf
infra/aws_apprunner/modules/application/: main.tf  output.tf
infra/aws_apprunner/modules/db/: main.tf
infra/aws_apprunner/modules/iam/: main.tf
infra/aws_apprunner/modules/monitoring/: main.tf
infra/aws_apprunner/modules/secret_manager/: main.tf
infra/aws_lambda/: .terraform.lock.hcl  README.md  main.tf  output.tf  provider.tf  variables.tf
infra/aws_lambda/modules/application/: main.tf  output.tf  valiables.tf
infra/gcp/: .terraform.lock.hcl  README.md  main.tf  output.tf  provider.tf  readme.md  variables.tf
infra/gcp/modules/db/: main.tf
notebook/: try_add.py
python_project_template/: __main__.py  cli.py
python_project_template/conf/: conf.py  settings.py
python_project_template/utils/: settings.py
scripts/sample/: main.py  sample.py
source/: modules.html  python_project_template.conf.html  python_project_template.html  python_project_template.utils.html  src.config.html  src.html  src.util.html  src.utils.html
src/: __init__.py  __main__.py  app.py  cli.py  const.py  di.py  init.py  lambda_app.py  settings.py  version.py
src/config/: config.yml  settings.py
src/domain/message/: message.py  message_repository.py
src/logger/: formatter.py  logger_config_aws.yaml  logger_config_azure.yaml  logger_config_default.yaml  logger_config_gcp.yaml  logging.py
src/loggers/: formatter.py  logger_config.yaml  logger_config_default.yaml  logging.py
src/presentation/: init.py
src/presentation/cli/: app.py
src/presentation/dash/: app.py  index.py  injector.py
src/presentation/fastapi/: app.py  exception_handlers.py
src/presentation/flask/: app.py  routes.py
src/presentation/streamlit/: home.py  index.py
src/presentation/util/: init.py
src/usecase/: error.py  history.py  register.py  sample.py
src/util/: logging.py
tests/: conftest.py  test_add.py
tests/domain/message/: test_sample.py
tests/e2e/: test_fastapi.py  test_flask.py
tests/templates/: README.md  fixtures_template.py  test_integration_template.py  test_parametrized_template.py  test_repository_mock_template.py  test_usecase_mock_template.py  test_utils_template.py
tests/test_usecase/: test_sample.py
(+53 files in other folders)
