[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
google-cloud = "^0.34.0"
uvicorn = "^0.27.0.post1"
gunicorn = "^21.2.0"
pyyaml = "^6.0.1"
click = "^8.0.3"
typer = "^0.4.0"
dash = "^2.15.0"
dash-bootstrap-components = "^1.5.0"
streamlit = "^1.31.0"
environs = "^10.3.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
tqdm = "^4.66.2"
google-cloud-firestore = "^2.15.0"
azure-cosmos = "^4.6.0"
azure-identity = "^1.15.0"
boto3 = "^1.34.69"
watchtower = "^3.1.0"
opencensus-ext-azure = "^1.1.13"
injector = "^0.21.0"
line-profiler = "^4.1.3"
nbconvert = "^7.16.4"
python-dotenv = "^1.0.1"
mangum = "^0.19.0"
aws-wsgi = "^0.2.7"
aws-secretsmanager-caching = "^1.1.3"
botocore = "^1.35.67"
httpx = "0.27.2"

[tool.poetry.group.dev.dependencies]
mypy = "1.8.0"
pytest = "^8.0.0"
types-pyyaml = "^6.0.12.12"
ruff = "0.2.1"
ipykernel = "^6.29.2"
pytest-cov = "^4.1.0"
matplotlib = "^3.8.3"
japanize-matplotlib = "^1.1.3"
plotly = "^5.19.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    # cf. https://docs.astral.sh/ruff/rules/
    "A",  # flake8-builtins（組み込み変数の使用をチェック）
    "B",  # flake8-bugbear（潜在的なバグやパフォーマンス上の問題を検知）
    "C4",  # flake8-comprehensions（list/set/dictのコードの最適化や改善）
    "C90",  # mccabe（複雑度を測定）
    "E",  # pycodestyle error（PEP8に準拠したコーディングスタイル）
    "F",  # Pyflakes（バグや不要なインポートの検出）
    "I",  # isort（インポート文をソート）
    "N",  # pep8-naming（PEP8に準拠した命名ルール）
    "PERF", # Perflint（パフォーマンス上の問題を検知）
    "PIE",  # flake8-pie（その他のルール）
    "PT", # flake8-pytest-style（Pytestのテストコードのスタイルチェック）
    "RUF",  # ruff-specific rules（ruff特有のルール）
    "RUF100",  # unused noqa
    "S",  # flake8-bandit（セキュリティ上の問題を検知）
    "SIM",  # flake8-simplify（冗長なコードや非効率なコードを簡潔な形に改善）
    "W",  # pycodestyle warning（PEP8に準拠したコーディングスタイル）
]
fixable = ["E", "F", "I"]
unfixable = ["W", "F401", "F841"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]

[tool.mypy]
python_version = "3.12"
# チェック項目
strict = true
warn_unreachable = true
# strictを打ち消す
disallow_subclassing_any = false
warn_return_any = false
disallow_any_decorated = false
disallow_any_generics = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
no_implicit_reexport = false
warn_unused_ignores = false
# サードパーティー製のライブラリを無視
ignore_missing_imports = true
# 表示関係
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
show_error_code_links = true
show_traceback = true
exclude = ["dist"]
# cf. https://mypy.readthedocs.io/en/stable/config_file.html

[[tool.mypy.overrides]]
module = ["requests.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["azure.*"]
ignore_errors = true

[tool.pytest]
minversion = "6.0"
addopts = "-svv --tb=short --capture=no --full-trace"
testpaths = ["tests/*"]

[tool.bandit]
exclude_dirs = ["tests"]
