[metadata]
name = python_project_template
version = attr: python_project_template.__version__
description = sample project
long_description = file: README.md
long_description_content_type = text/markdown
license = None


[isort]
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[flake8]
ignore = E203, W503, W504
max-line-length = 88
exclude = .*_cache,.venv,__pycache__,docs,notebook,old
show_source = True
statistics = True

[tool:pytest]
addopts =  -l -v -s --junit-xml=logs/pytest_report/pytest_report.xml
testpaths = tests
norecursedirs =
    .*_cache
    .venv
    __pycache__
    docs
    notebook
    old

[mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
python_version= 3.9
exclude = (.*_cache|.venv|__pycache__|docs|notebook|old)/
# チェック項目
strict = True
warn_unreachable = True
# strictを打ち消す
disallow_subclassing_any = False
warn_return_any = False
disallow_any_decorated = False
disallow_any_generics = False
disallow_untyped_calls = False
no_implicit_reexport = False
# サードパーティー製のライブラリを無視
ignore_missing_imports = True
# 表示関係
pretty = True
show_error_codes = True
show_error_context = True
# 出力
any_exprs_report = logs/mypy_report
linecount_report = logs/mypy_report
html_report = logs/mypy_report
